--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,21 +2,18 @@
 name = "origami-musings"
 version = "0.1.0"
 description = ""
-authors = ["neerajaabhyankar <neeraja93.a@gmail.com>"]
+authors = ["Neeraja Abhyankar <neeraja.abhyankar@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-jupyter = "^1.0.0"
-matplotlib = "^3.5.1"
-shapely = "^1.8.0"
-scikit-learn = "^1.0.2"
-networkx = "^2.6.3"
-snappy = "^3.0.3"
-open3d = "^0.14.1"
-plotly = "^5.5.0"
+python = "^3.11"
+numpy = "^2.0.0"
+plotly = "^5.22.0"
+vedo = "^2024.5.2"
+ipykernel = "^6.29.5"
+nbformat = "^5.10.4"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
